RESOLVED FIXED 247631
REGRESSION (STP 157) CSS2/floats/floats-placement-001.html fails
https://bugs.webkit.org/show_bug.cgi?id=247631
Summary REGRESSION (STP 157) CSS2/floats/floats-placement-001.html fails
alan
Reported 2022-11-08 12:41:16 PST
ssia
Attachments
Patch (4.71 KB, patch)
2022-11-09 19:15 PST, alan
no flags
Patch (5.92 KB, patch)
2022-11-10 04:54 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2022-11-08 12:41:40 PST
alan
Comment 2 2022-11-09 19:15:52 PST
alan
Comment 3 2022-11-10 04:54:51 PST
EWS
Comment 4 2022-11-10 05:50:32 PST
Committed 256530@main (1abd9354b891): <https://commits.webkit.org/256530@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 463475 [details].
Note You need to log in before you can comment on or make changes to this bug.