REGRESSION (STP 157) CSS2/floats/floats-placement-001.html fails https://bugs.webkit.org/show_bug.cgi?id=247631 <rdar://problem/102103989>

Reviewed by Antti Koivisto.

While empty (height: 0px) float boxes do have vertical positions, they should be ignored when
probing for horizontal constraints.

* LayoutTests/fast/block/float/ignore-empty-float-expected.html: Added.
* LayoutTests/fast/block/float/ignore-empty-float.html: Added.
* Source/WebCore/layout/floats/FloatingContext.cpp:
(WebCore::Layout::FloatingContext::constraints const):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::tryPlacingFloatBox):
* Source/WebCore/layout/layouttree/LayoutGeometryRect.h:
(WebCore::Layout::Rect::isEmpty const):

css2.1/20110323/floats-zero-height-wrap-002.htm: Firefox agrees with the new result. The 0 height float box should not "indent" the linebox (not even when it has clearance).

Canonical link: https://commits.webkit.org/256530@main